Fixed table text alignment on conn_clients.htm

--- a/files/htdocs/cascade.css
+++ b/files/htdocs/cascade.css
@@ -550,7 +550,9 @@ table tbody th {
   border: 0;
 }
 table#neighbors.cbi-section-table th.cbi-section-table-cell,
-table#neighbors.cbi-section-table td.cbi-section-table-cell {
+table#conn_clients.cbi-section-table th.cbi-section-table-cell,
+table#neighbors.cbi-section-table td.cbi-section-table-cell,
+table#conn_clients.cbi-section-table td.cbi-section-table-cell {
   text-align:center;
 }
 header {
