--- a/files/htdocs/tinycombo.css
+++ b/files/htdocs/tinycombo.css
@@ -1191,7 +1191,9 @@ table.cbi-section-table td.cbi-section-table-cell {
   white-space: nowrap;
 }
 table#neighbors.cbi-section-table th.cbi-section-table-cell,
-table#neighbors.cbi-section-table td.cbi-section-table-cell {
+table#conn_clients.cbi-section-table th.cbi-section-table-cell,
+table#neighbors.cbi-section-table td.cbi-section-table-cell,
+table#conn_clients.cbi-section-table td.cbi-section-table-cell {
   text-align:center;
 }
 .cbi-value-description {
